src/css/imports/custom-utilities.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

p {
  @apply mb-4 !important;
}

body.page-collections #navigation {
  /* position: relative !important; */
  background-color: rgba(255, 255, 255, 0.6);
}

body.page-home #menu #nav-selected {
  @apply font-medium tracking-widest;
}

body.page-collections #menu #nav-collections {
  @apply font-medium tracking-wider;
}

/* body.page-jesse-rieser #menu #nav-about {
  @apply font-medium tracking-wider;
} */

body {
  background-color: #fff;
  transition: 0.33s background-color cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition-delay: 0.15s;
}

html.is-animating img {
  opacity: 0;
}

.transition-page {
  transition: 0.33s opacity cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition-delay: 0.33s;
  opacity: 1;
}

body.page-collections .transition-page {
  transition-delay: 0s !important;
}

html.is-animating .transition-page {
  opacity: 0;
}

html.is-animating #filters,
html.is-animating #navigation,
html.is-animating #filter {
  background-color: transparent !important;
  opacity: 0 !important;
}

/* html.is-animating.is-leaving .transition-page {
  transition: 0.1s opacity linear;
  transition-delay: 0;
} */

.transition-nav {
  transition: 0.15s;
  transition-delay: 0.15s;
  opacity: 1;
}

html.is-animating .transition-nav {
  opacity: 0;
}

/* html.is-animating.is-leaving .transition-nav {
  transition: 0.1s opacity linear;
  transition-delay: 0.33s;
} */

#navigation {
  transition: 0.33s transform ease-in-out, 0.33s opacity ease-in-out 0.33s;
  /* height: 68px !important; */
  /* z-index: 999; */
}

#navigation.active {
  @apply bg-white;
  height: 100vh !important;
  transform: translate3d(0px, 0px, 0px) !important;

  .hue-header.white .shift {
    color: #000 !important;
  }

  /* .hue-header.white button{
    color: #000 !important;
  } */

  .menu {
    transform: translateY(0%);
    display: flex !important;
  }
}

#navigation .menu {
  transition: 0.33s all ease-in-out;
}

button:hover {
  text-shadow: 0 0 0.01px black;
}

#filter-container {
  transition: 0.33s transform ease-in-out;
}

#filter {
  /* overflow: hidden; */
  /* margin: 0 -0.5rem 0 -0.5rem; */
  transition: 0.33s opacity cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

@keyframes loading-pulse {
  0% {
    background-position: -400px 0%;
  }
  100% {
    background-position: 400px 0%;
  }
}

header#project-header img {
  mask-image: url("/r-mask.svg");
  mask-repeat: no-repeat;
  mask-position: center 40%;
  mask-size: 25% auto;
  opacity: 0;
  transition: opacity 0.33s ease-in-out;
}

header#project-header img.lazyloaded {
  animation-name: r-drop, r-expand;
  animation-duration: 1s, 0.5s;
  animation-iteration-count: 1, 1;
  animation-timing-function: ease-out, ease-in;
  animation-fill-mode: forwards, forwards;
  transform-origin: center, center;
  opacity: 1;
  animation-delay: 0ms, 2.5s;
}

/* html.is-rendering header#project-header img.lazyloaded {
  animation-name: r-drop;
  animation-duration: 1s;
  animation-iteration-count: 1;
  animation-timing-function: ease-out;
  animation-fill-mode: forwards;
  transform-origin: center;
  opacity: 1;
  animation-delay: 0ms;
} */

#header-overlay,
#feature-overlay {
  will-change: opacity, transform;
}

header img.lazyload + #header-overlay,
header img.lazyloading + #header-overlay,
header img.lazyload + #feature-overlay,
header img.lazyloading + #feature-overlay {
  transition: opacity 0.33s ease-in-out 0.1s;
  opacity: 1;
}

#header-pointer {
  transition: opacity 0.33s ease-in-out 0.66s;
  opacity: 1;
}

#header-loading {
  transition: opacity 0.33s ease-in-out 0.33s;
  opacity: 1;
}

header img.lazyload + #header-overlay + #header-loading + #header-pointer,
header img.lazyload + #feature-overlay + #header-loading + #header-pointer,
header img.lazyloading + #header-overlay + #header-loading + #header-pointer,
header img.lazyloading + #feature-overlay + #header-loading + #header-pointer {
  opacity: 0;
}

/* header img.lazyloaded + #header-overlay,  header img.lazyloaded + #feature-overlay {
  opacity: 0;
} */

header img.lazyloaded + #header-overlay + #header-loading,
header img.lazyloaded + #feature-overlay + #header-loading {
  opacity: 0;
}

@keyframes r-drop {
  0% {
    mask-position: center 40%;
  }
  100% {
    mask-position: center 50%;
  }
}

@keyframes r-expand {
  0% {
  }
  99% {
    mask-size: 1000% auto;
  }
  100% {
    mask-size: 5000% auto;
  }
}

/* header img + svg #mask svg {
  will-change: transform;
  display: block;
}
header img + svg #mask rect {
  will-change: transform;
  opacity: 1;
}
header img + svg #mask path {
  will-change: opacity;
  transform-box:fill-box;
  transform: translateX(50%) translateX(-150px) translateY(50%)
    translateY(-170px);
  opacity: 0;
  transition: opacity 1s ease-in-out 0.2s;
}
header img.lazyloaded + svg #mask path {
  transform: translateX(50%) translateX(-150px) translateY(50%)
  translateY(-170px);
  opacity: 1;
}


header img + svg rect.cover {
  will-change: opactiy;
  transition: 1s opacity ease-in-out;
  transition-delay: 3s;
  transform-origin: center;
  opacity: 1;
}

header img.lazyloaded + svg rect.cover {
  opacity: 0;
  animation-name: r-expand;
  animation-duration: 0.66s;
  animation-iteration-count: 1;
  animation-timing-function: cubic-bezier(1, 0, 0.81, 0.58);
  animation-fill-mode: forwards;
  transform-origin: center;
  animation-delay: 2s;
} */

header img {
  transition: opacity 0.33s ease-in-out;
  will-change: opactiy;
}
header img.lazyload,
header img.lazyloading {
  opacity: 0;
}
header img.lazyloaded {
  opacity: 1;
  transition: opacity 0s ease-in-out;
}

#loading-overlay {
  will-change: opactiy;
  transition: opacity 0.33s ease-in-out 0.1s;
}

#project-header {
  min-height: -webkit-fill-available;
}

#project-header img.lazyloaded #loading-overlay {
  opacity: 0;
}

img[data-sizes="auto"] {
  display: block;
  width: 100%;
}
/* ... */

